# static-ip-manager

./: README.md  pyproject.toml
src/static_ip_manager/ui/: mainwindow.py  mainwindow.ui
src/static_ip_manager_python/: __init__.py  manager.py
