[project]
name = "static-ip-manager"
version = "0.1.0"
description = ""
authors = [
    { name = "imbytecat", email = "imbytecat@gmail.com" }
]
dependencies = [
    "PyQt6>=6.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/static_ip_manager"]

[project.scripts]
dev = 'static_ip_manager.manager:main'
